# didactic-octo-enigma

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml  conanfile.txt  hackerrank-cpp.kdev4
.conan/: conanfile_noboost.txt
cmake/: build_dependencies.cmake  hackerrank_challenge.cmake
scripts/: setup-new-problem
scripts/cmake/: checkcompiler.cmake  compiler_check.cmake  conansetup.cmake  hackerrank_challenge.cmake  hackerrank_setup_project.cmake  hackerrank_setup_test_project.cmake  list_folders.cmake  project_add_all_folders.cmake  subdirlist.cmake
src/algorithms/implementation/: CMakeLists.txt
src/algorithms/implementation/angry_professor/: CMakeLists.txt  angry_professor.cpp  angry_professor.h  angry_professor_test.cpp
src/algorithms/implementation/apple_and_orange/: CMakeLists.txt  apple_and_orange.cpp  apple_and_orange.h  apple_and_orange_test.cpp
src/algorithms/implementation/between_two_sets/: CMakeLists.txt  between_two_sets.cpp  between_two_sets.h  between_two_sets_test.cpp
src/algorithms/implementation/birthday_chocolate/: CMakeLists.txt  birthday_chocolate.cpp  birthday_chocolate.h  birthday_chocolate_test.cpp
src/algorithms/implementation/bon_appetit/: CMakeLists.txt  bon_appetit.cpp  bon_appetit.h  bon_appetit_test.cpp
src/algorithms/implementation/breaking_the_records/: CMakeLists.txt  breaking_the_records.cpp  breaking_the_records.h  breaking_the_records_test.cpp
src/algorithms/implementation/circular_array_rotation/: CMakeLists.txt  circular_array_rotation.cpp  circular_array_rotation.h  circular_array_rotation_test.cpp
src/algorithms/implementation/counting_valleys/: CMakeLists.txt  counting_valleys.cpp  counting_valleys.h  counting_valleys_test.cpp
src/algorithms/implementation/cut_the_sticks/: CMakeLists.txt  cut_the_sticks.cpp  cut_the_sticks.h  cut_the_sticks_test.cpp
src/algorithms/implementation/day_of_the_programmer/: CMakeLists.txt  day_of_the_programmer.cpp  day_of_the_programmer.h  day_of_the_programmer_test.cpp
src/algorithms/implementation/divisible_sum_pairs/: CMakeLists.txt  divisible_sum_pairs.cpp  divisible_sum_pairs.h  divisible_sum_pairs_test.cpp
src/algorithms/implementation/grading_students/: CMakeLists.txt  grading_students.cpp  grading_students.h  grading_students_test.cpp
src/algorithms/implementation/kangaroo/: CMakeLists.txt  kangaroo.cpp  kangaroo.h  kangaroo_test.cpp
src/algorithms/implementation/library_fine/: CMakeLists.txt  library_fine.cpp  library_fine.h  library_fine_test.cpp
src/algorithms/implementation/migratory_birds/: CMakeLists.txt  migratory_birds.cpp  migratory_birds.h  migratory_birds_test.cpp
src/algorithms/regex/valid_pan_format/: CMakeLists.txt  valid_pan_format.cpp  valid_pan_format.h  valid_pan_format_test.cpp
src/algorithms/search/sherlock_and_array/: CMakeLists.txt  sherlock_and_array.cpp  sherlock_and_array.h  sherlock_and_array_test.cpp
src/algorithms/strings/caesar_cipher/: CMakeLists.txt  caesar_cipher.cpp  caesar_cipher.h  caesar_cipher_test.cpp
src/algorithms/strings/funny_string/: CMakeLists.txt  funny_string.cpp  funny_string.h  funny_string_test.cpp
src/algorithms/strings/two_strings/: CMakeLists.txt  two_strings.cpp  two_strings.h  two_strings_test.cpp
src/algorithms/warmup/a_very_big_sum/: CMakeLists.txt  a_very_big_sum.cpp  a_very_big_sum.h  a_very_big_sum_test.cpp
src/algorithms/warmup/birthday_cake_candles/: CMakeLists.txt  birthday_cake_candles.cpp  birthday_cake_candles.h  birthday_cake_candles_test.cpp
src/algorithms/warmup/circular_array_rotation/: circular_array_rotation.cpp  circular_array_rotation.h  circular_array_rotation_test.cpp
src/algorithms/warmup/compare_the_triplets/: CMakeLists.txt  compare_the_triplets.cpp  compare_the_triplets.h  compare_the_triplets_test.cpp
src/algorithms/warmup/diagonal_difference/: CMakeLists.txt  diagonal_difference.cpp  diagonal_difference.h  diagonal_difference_test.cpp
src/algorithms/warmup/mini_max_sum/: CMakeLists.txt  mini_max_sum.cpp  mini_max_sum.h  mini_max_sum_test.cpp
src/algorithms/warmup/plus_minus/: CMakeLists.txt  plus_minus.cpp  plus_minus.h  plus_minus_test.cpp
src/algorithms/warmup/simple_array_sum/: CMakeLists.txt  simple_array_sum.cpp  simple_array_sum.h  simple_array_sum_test.cpp
src/algorithms/warmup/staircase/: CMakeLists.txt  staircase.cpp  staircase.h  staircase_test.cpp
src/algorithms/warmup/time_conversion/: CMakeLists.txt  time_conversion.cpp  time_conversion.h  time_conversion_test.cpp
src/datastructures/linkedlists/: CMakeLists.txt  linkedlists.cpp  linkedlists.h  linkedlists_test.cpp
src/hackerrank_gtest/: CMakeLists.txt  hackerrank_gtest.cpp  hackerrank_gtest.h
src/mathematics/find_point/: find_point.cpp  find_point.h  find_point_test.cpp
src/mathematics/fundamentals/find_point/: CMakeLists.txt  find_point.cpp  find_point.h
src/regex/applications/valid_pan_format/: valid_pan_format.cpp  valid_pan_format.h  valid_pan_format_test.cpp
test/algorithms/: CMakeLists.txt
test/algorithms/implementation/: CMakeLists.txt
test/algorithms/implementation/angry_professor_test/: angry_professor_test.cpp
test/algorithms/implementation/apple_and_orange_test/: apple_and_orange_test.cpp
test/algorithms/implementation/between_two_sets_test/: CMakeLists.txt  between_two_sets_test.cpp
test/algorithms/implementation/birthday_chocolate_test/: birthday_chocolate_test.cpp
test/algorithms/implementation/bon_appetit_test/: bon_appetit_test.cpp
test/algorithms/implementation/breaking_the_records_test/: breaking_the_records_test.cpp
test/algorithms/implementation/cut_the_sticks_test/: cut_the_sticks_test.cpp
test/algorithms/implementation/day_of_the_programmer_test/: day_of_the_programmer_test.cpp
test/algorithms/implementation/kangaroo_test/: CMakeLists.txt  kangaroo_test.cpp
test/algorithms/search/: CMakeLists.txt
test/datastructures/linkedlists_test/: CMakeLists.txt  linkedlists_test.cpp
test/mathematics/: CMakeLists.txt
test/mathematics/find_point_test/: find_point_test.cpp
(+16 files in other folders)
